---------------------------------------------------------------------------------------------------
Version: 0.34.1
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.34.0
Date: 2024-09-22
  Features:
    - Added "exclude from future blueprints" feature. This can be used to "ignore" all entities in a stage, in later blueprints.
---------------------------------------------------------------------------------------------------
Version: 0.33.4
Date: ????
  Minor Features:
    - Added "unhide infinity items" startup option, which makes infinity chests/pipes compatible with upgrade planner,
      and reveals infinity items in filters/deconstruction planner.
  Bugfixes:
    - Fixed that trains would sometimes not be deleted.

---------------------------------------------------------------------------------------------------
Version: 0.33.2
Date: 2024-07-30
  Changes:
    - If using a blueprint book template, if the book template's name is not changed from default, it will match the project name.
    - Improved alignment of "Get reference" window in blueprint template gui.
    - Icons in blueprint book templates are updated when stage's icons are updated.
    - Improved blueprint export gui layout.
  Features:
    - Added feature to export a project's blueprint book directly to a string.
---------------------------------------------------------------------------------------------------
Version: 0.33.1
Date: 2024-06-02
  Bugfixes:
    - When inserting a new stage, the stage will also be inserted in the blueprint book template (if it exists).
---------------------------------------------------------------------------------------------------
Version: 0.33.0
Date: ????
  Features:
    - Clicking a gps tag on a stage now teleports you to that location. This can be configured in player settings, default on.