@@ -2,6 +2,7 @@
 Version: 0.34.1
 Date: ????
   Changes:
+    - Ghost entities in projects are now always included in blueprints.
 ---------------------------------------------------------------------------------------------------
 Version: 0.34.0
 Date: 2024-09-22
